--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,10 +1,7 @@
 {
   "type": "postgres",
   "host": "localhost",
-  "port": 5432,
-  "username": "postgres",
-  "password": "docker",
-  "database": "gostack_desafio06",
+  "url": "postgres://gitpod@127.0.0.1/gostack",
   "entities": ["./src/models/*.ts"],
   "migrations": ["./src/database/migrations/*.ts"],
   "cli": {
